cambios en stats

--- a/pages/deportes/Voley/home_voley.html
+++ b/pages/deportes/Voley/home_voley.html
@@ -187,10 +187,25 @@
                     <img src="./imagenes/Jugadores/yuki_ishikawa.png" alt="">
                 </div>
                 <div class="jugador_info">
-                    <h3 class="titulo_info">Mejor Anotador</h3>
+                    <h3 class="titulo_info">Máximo Anotador</h3>
                     <h2>275</h2>
                     <p>Yuki Ishikawa</p>
-                    <p><img src="./imagenes/banderas/bandera_japon.png" alt="" height="15px" width="30px"> Japón</p>
+                    <p><img src="./imagenes/banderas/bandera_japon.png" alt="Bandera Japón" height="15px" width="30px"> Japón</p>
+                </div>
+            </div>
+
+            <div class="estadisticas">
+                <div class="estadistica_back">
+                    <img src="./imagenes/fondo_nations_league.jpeg" alt="">
+                </div>
+                <div class="jugador">
+                    <img src="./imagenes/Jugadores/yuki_ishikawa.png" alt="">
+                </div>
+                <div class="jugador_info">
+                    <h3 class="titulo_info">Mejor Atacante</h3>
+                    <h2>237</h2>
+                    <p>Yuki Ishikawa</p>
+                    <p><img src="./imagenes/banderas/bandera_japon.png" alt="" height="15px" width="30px"> JAPÓN</p>
                 </div>
             </div>
 
@@ -208,18 +223,45 @@
                     <p><img src="./imagenes/banderas/bandera_argentina.png" alt="" height="15px" width="30px"> ARGENTINA</p>
                 </div>
             </div>
-
             <div class="estadisticas">
                 <div class="estadistica_back">
                     <img src="./imagenes/fondo_nations_league.jpeg" alt="">
                 </div>
                 <div class="jugador">
-                    <img src="./imagenes/Jugadores/yuki_ishikawa.png" alt="">
+                    <img src="./imagenes/Jugadores/nimir_abdel-aziz.png" alt="">
                 </div>
                 <div class="jugador_info">
-                    <h3 class="titulo_info">Mejor Anotador</h3>
-                    <h2>275</h2>
-                    <p>Yuki Ishikawa</p>
+                    <h3 class="titulo_info">Mejor Sacador</h3>
+                    <h2>25</h2>
+                    <p>Nimir Abdel-Aziz</p>
+                    <p><img src="./imagenes/banderas/bandera_paisesbajos.png" alt="" height="15px" width="30px"> PAÍSES BAJOS</p>
+                </div>
+            </div>
+            <div class="estadisticas">
+                <div class="estadistica_back">
+                    <img src="./imagenes/fondo_nations_league.jpeg" alt="">
+                </div>
+                <div class="jugador">
+                    <img src="./imagenes/Jugadores/micah_christenson.png" alt="">
+                </div>
+                <div class="jugador_info">
+                    <h3 class="titulo_info">Mejor Armador</h3>
+                    <h2>325</h2>
+                    <p>Micah Christenson</p>
+                    <p><img src="./imagenes/banderas/bandera_eeuu.png" alt="" height="15px" width="30px"> USA</p>
+                </div>
+            </div>
+            <div class="estadisticas">
+                <div class="estadistica_back">
+                    <img src="./imagenes/fondo_nations_league.jpeg" alt="">
+                </div>
+                <div class="jugador">
+                    <img src="./imagenes/Jugadores/tomohiro_yamamoto.png" alt="">
+                </div>
+                <div class="jugador_info">
+                    <h3 class="titulo_info">Mejor Defensor</h3>
+                    <h2>131</h2>
+                    <p>Tomohiro Yamamoto</p>
                     <p><img src="./imagenes/banderas/bandera_japon.png" alt="" height="15px" width="30px"> Japón</p>
                 </div>
             </div>
@@ -228,13 +270,64 @@
                     <img src="./imagenes/fondo_nations_league.jpeg" alt="">
                 </div>
                 <div class="jugador">
-                    <img src="./imagenes/Jugadores/agustin_loser.png" alt="">
+                    <img src="./imagenes/Jugadores/jani_kovacic.png" alt="">
+                </div>
+                <div class="jugador_info">
+                    <h3 class="titulo_info">Mejor Defensor</h3>
+                    <h2>53</h2>
+                    <p>Jani KOVAČIČ</p>
+                    <p><img src="./imagenes/banderas/bandera_eslovenia.png" alt="" height="15px" width="30px"> Eslovenia</p>
+                </div>
+            </div>
+            
+
+        </div>
+        <h2 class="divisiones">Estadisticas de la Nations League (Femenina)</h2>
+
+        <div class="estadisticas_nations_league">
+            
+            <div class="estadisticas">
+                <div class="estadistica_back">
+                    <img src="./imagenes/fondo_nations_league_fem.jpeg" alt="">
+                </div>
+                <div class="jugador">
+                    <img src="./imagenes/Jugadores/magdalena_stysiak.png" alt="">
+                </div>
+                <div class="jugador_info">
+                    <h3 class="titulo_info">Máxima Anotadora</h3>
+                    <h2>298</h2>
+                    <p>Magdalena Stysiak</p>
+                    <p><img src="./imagenes/banderas/bandera_polonia.png" alt="Bandera Japón" height="15px" width="30px"> Polonia</p>
+                </div>
+            </div>
+
+            <div class="estadisticas">
+                <div class="estadistica_back">
+                    <img src="./imagenes/fondo_nations_league.jpeg" alt="">
+                </div>
+                <div class="jugador">
+                    <img src="./imagenes/Jugadores/li_yingying.webp" alt="">
+                </div>
+                <div class="jugador_info">
+                    <h3 class="titulo_info">Mejor Atacante</h3>
+                    <h2>262</h2>
+                    <p>Yingyin Li</p>
+                    <p><img src="./imagenes/banderas/bandera_china.png" alt="" height="15px" width="30px"> China</p>
+                </div>
+            </div>
+
+            <div class="estadisticas">
+                <div class="estadistica_back">
+                    <img src="./imagenes/fondo_nations_league.jpeg" alt="">
+                </div>
+                <div class="jugador">
+                    <img src="./imagenes/Jugadores/agus_loser.png" alt="">
                 </div>
                 <div class="jugador_info">
                     <h3 class="titulo_info">Mejor Bloqueador</h3>
                     <h2>53</h2>
                     <p>Agustin Loser</p>
-                    <p><img src="./imagenes/banderas/bandera_argentina.png" alt="" height="15px" width="30px">ARGENTINA</p>
+                    <p><img src="./imagenes/banderas/bandera_argentina.png" alt="" height="15px" width="30px"> ARGENTINA</p>
                 </div>
             </div>
             <div class="estadisticas">
@@ -242,13 +335,13 @@
                     <img src="./imagenes/fondo_nations_league.jpeg" alt="">
                 </div>
                 <div class="jugador">
-                    <img src="./imagenes/Jugadores/agustin_loser.png" alt="">
+                    <img src="./imagenes/Jugadores/nimir_abdel-aziz.png" alt="">
                 </div>
                 <div class="jugador_info">
-                    <h3 class="titulo_info">Mejor Bloqueador</h3>
-                    <h2>53</h2>
-                    <p>Agustin Loser</p>
-                    <p><img src="./imagenes/banderas/bandera_argentina.png" alt="" height="15px" width="30px">ARGENTINA</p>
+                    <h3 class="titulo_info">Mejor Sacador</h3>
+                    <h2>25</h2>
+                    <p>Nimir Abdel-Aziz</p>
+                    <p><img src="./imagenes/banderas/bandera_paisesbajos.png" alt="" height="15px" width="30px"> PAÍSES BAJOS</p>
                 </div>
             </div>
             <div class="estadisticas">
@@ -256,16 +349,45 @@
                     <img src="./imagenes/fondo_nations_league.jpeg" alt="">
                 </div>
                 <div class="jugador">
-                    <img src="./imagenes/Jugadores/agustin_loser.png" alt="">
+                    <img src="./imagenes/Jugadores/micah_christenson.png" alt="">
                 </div>
                 <div class="jugador_info">
-                    <h3 class="titulo_info">Mejor Bloqueador</h3>
+                    <h3 class="titulo_info">Mejor Armador</h3>
+                    <h2>325</h2>
+                    <p>Micah Christenson</p>
+                    <p><img src="./imagenes/banderas/bandera_eeuu.png" alt="" height="15px" width="30px"> USA</p>
+                </div>
+            </div>
+            <div class="estadisticas">
+                <div class="estadistica_back">
+                    <img src="./imagenes/fondo_nations_league.jpeg" alt="">
+                </div>
+                <div class="jugador">
+                    <img src="./imagenes/Jugadores/tomohiro_yamamoto.png" alt="">
+                </div>
+                <div class="jugador_info">
+                    <h3 class="titulo_info">Mejor Defensor</h3>
+                    <h2>131</h2>
+                    <p>Tomohiro Yamamoto</p>
+                    <p><img src="./imagenes/banderas/bandera_japon.png" alt="" height="15px" width="30px"> Japón</p>
+                </div>
+            </div>
+            <div class="estadisticas">
+                <div class="estadistica_back">
+                    <img src="./imagenes/fondo_nations_league.jpeg" alt="">
+                </div>
+                <div class="jugador">
+                    <img src="./imagenes/Jugadores/jani_kovacic.png" alt="">
+                </div>
+                <div class="jugador_info">
+                    <h3 class="titulo_info">Mejor Defensor</h3>
                     <h2>53</h2>
-                    <p>Agustin Loser</p>
-                    <p><img src="./imagenes/banderas/bandera_argentina.png" alt="" height="15px" width="30px">ARGENTINA</p>
+                    <p>Jani KOVAČIČ</p>
+                    <p><img src="./imagenes/banderas/bandera_eslovenia.png" alt="" height="15px" width="30px"> Eslovenia</p>
                 </div>
             </div>
         </div>
+
     </section>
 
     <!---<section class="carrusel">
