cambios en stats

--- a/pages/deportes/Voley/home_voley.html
+++ b/pages/deportes/Voley/home_voley.html
@@ -303,7 +303,7 @@
 
             <div class="estadisticas">
                 <div class="estadistica_back">
-                    <img src="./imagenes/fondo_nations_league.jpeg" alt="">
+                    <img src="./imagenes/fondo_nations_league_fem.jpeg" alt="">
                 </div>
                 <div class="jugador">
                     <img src="./imagenes/Jugadores/li_yingying.webp" alt="">
@@ -318,73 +318,74 @@
 
             <div class="estadisticas">
                 <div class="estadistica_back">
-                    <img src="./imagenes/fondo_nations_league.jpeg" alt="">
+                    <img src="./imagenes/fondo_nations_league_fem.jpeg" alt="">
                 </div>
                 <div class="jugador">
-                    <img src="./imagenes/Jugadores/agus_loser.png" alt="">
+                    <img src="./imagenes/Jugadores/agnieszka_korneluk.png" alt="">
                 </div>
                 <div class="jugador_info">
-                    <h3 class="titulo_info">Mejor Bloqueador</h3>
-                    <h2>53</h2>
-                    <p>Agustin Loser</p>
-                    <p><img src="./imagenes/banderas/bandera_argentina.png" alt="" height="15px" width="30px"> ARGENTINA</p>
+                    <h3 class="titulo_info">Mejor Bloqueadora</h3>
+                    <h2>48</h2>
+                    <p>Agnieszka Korneluk</p>
+                    <p><img src="./imagenes/banderas/bandera_polonia.png" alt="" height="15px" width="30px"> Polonia</p>
                 </div>
             </div>
             <div class="estadisticas">
                 <div class="estadistica_back">
-                    <img src="./imagenes/fondo_nations_league.jpeg" alt="">
+                    <img src="./imagenes/fondo_nations_league_fem.jpeg" alt="">
                 </div>
                 <div class="jugador">
                     <img src="./imagenes/Jugadores/nimir_abdel-aziz.png" alt="">
                 </div>
                 <div class="jugador_info">
-                    <h3 class="titulo_info">Mejor Sacador</h3>
-                    <h2>25</h2>
-                    <p>Nimir Abdel-Aziz</p>
-                    <p><img src="./imagenes/banderas/bandera_paisesbajos.png" alt="" height="15px" width="30px"> PAÍSES BAJOS</p>
+                    <h3 class="titulo_info">Mejor Sacadora</h3>
+                    <h2>19</h2>
+                    <p>Maria Yordanova</p>
+                    <p><img src="./imagenes/banderas/bandera_bulgaria.png" alt="" height="15px" width="30px"> Bulgaria</p>
                 </div>
             </div>
             <div class="estadisticas">
                 <div class="estadistica_back">
-                    <img src="./imagenes/fondo_nations_league.jpeg" alt="">
+                    <img src="./imagenes/fondo_nations_league_fem.jpeg" alt="">
                 </div>
                 <div class="jugador">
-                    <img src="./imagenes/Jugadores/micah_christenson.png" alt="">
+                    <img src="./imagenes/Jugadores/linyu_diao.png" alt="">
                 </div>
                 <div class="jugador_info">
-                    <h3 class="titulo_info">Mejor Armador</h3>
-                    <h2>325</h2>
-                    <p>Micah Christenson</p>
-                    <p><img src="./imagenes/banderas/bandera_eeuu.png" alt="" height="15px" width="30px"> USA</p>
+                    <h3 class="titulo_info">Mejor Armadora</h3>
+                    <h2>322</h2>
+                    <p>Linyu Diao</p>
+                    <p><img src="./imagenes/banderas/bandera_china.png" alt="" height="15px" width="30px"> China</p>
                 </div>
             </div>
             <div class="estadisticas">
                 <div class="estadistica_back">
-                    <img src="./imagenes/fondo_nations_league.jpeg" alt="">
+                    <img src="./imagenes/fondo_nations_league_fem.jpeg" alt="">
                 </div>
                 <div class="jugador">
-                    <img src="./imagenes/Jugadores/tomohiro_yamamoto.png" alt="">
+                    <img src="./imagenes/Jugadores/mila_pashkuleva.jpeg" alt="">
                 </div>
                 <div class="jugador_info">
-                    <h3 class="titulo_info">Mejor Defensor</h3>
-                    <h2>131</h2>
-                    <p>Tomohiro Yamamoto</p>
-                    <p><img src="./imagenes/banderas/bandera_japon.png" alt="" height="15px" width="30px"> Japón</p>
+                    <h3 class="titulo_info">Mejor Defensora</h3>
+                    <h2>176</h2>
+                    <p>MILA PASHKULEVA</p>
+                    <p><img src="./imagenes/banderas/bandera_bulgaria.png" alt="" height="15px" width="30px"> Bulgaria</p>
                 </div>
             </div>
-            <div class="estadisticas">
-                <div class="estadistica_back">
-                    <img src="./imagenes/fondo_nations_league.jpeg" alt="">
-                </div>
-                <div class="jugador">
-                    <img src="./imagenes/Jugadores/jani_kovacic.png" alt="">
-                </div>
-                <div class="jugador_info">
-                    <h3 class="titulo_info">Mejor Defensor</h3>
-                    <h2>53</h2>
-                    <p>Jani KOVAČIČ</p>
-                    <p><img src="./imagenes/banderas/bandera_eslovenia.png" alt="" height="15px" width="30px"> Eslovenia</p>
-                </div>
+            
+        </div>
+        <div class="estadisticas">
+            <div class="estadistica_back">
+                <img src="./imagenes/fondo_nations_league_fem.jpeg" alt="">
+            </div>
+            <div class="jugador">
+                <img src="./imagenes/Jugadores/yunlu_wang.webp" alt="">
+            </div>
+            <div class="jugador_info">
+                <h3 class="titulo_info">Mejor Defensora</h3>
+                <h2>89</h2>
+                <p>YUNLU WANG</p>
+                <p><img src="./imagenes/banderas/bandera_china.png" alt="" height="15px" width="30px"> China</p>
             </div>
         </div>
 
