--- a/pages/deportes/Voley/home_voley.html
+++ b/pages/deportes/Voley/home_voley.html
@@ -265,23 +265,24 @@
                     <p><img src="./imagenes/banderas/bandera_japon.png" alt="" height="15px" width="30px"> Japón</p>
                 </div>
             </div>
-            <div class="estadisticas">
-                <div class="estadistica_back">
-                    <img src="./imagenes/fondo_nations_league.jpeg" alt="">
-                </div>
-                <div class="jugador">
-                    <img src="./imagenes/Jugadores/jani_kovacic.png" alt="">
-                </div>
-                <div class="jugador_info">
-                    <h3 class="titulo_info">Mejor Defensor</h3>
-                    <h2>53</h2>
-                    <p>Jani KOVAČIČ</p>
-                    <p><img src="./imagenes/banderas/bandera_eslovenia.png" alt="" height="15px" width="30px"> Eslovenia</p>
-                </div>
-            </div>
             
+         </div>
 
+        <div class="estadisticas">
+            <div class="estadistica_back">
+                <img src="./imagenes/fondo_nations_league.jpeg" alt="">
+            </div>
+            <div class="jugador">
+                <img src="./imagenes/Jugadores/jani_kovacic.png" alt="">
+            </div>
+            <div class="jugador_info">
+                <h3 class="titulo_info">Mejor Receptor</h3>
+                <h2>53</h2>
+                <p>Jani KOVAČIČ</p>
+                <p><img src="./imagenes/banderas/bandera_eslovenia.png" alt="" height="15px" width="30px"> Eslovenia</p>
+            </div>
         </div>
+
         <h2 class="divisiones">Estadisticas de la Nations League (Femenina)</h2>
 
         <div class="estadisticas_nations_league">
@@ -382,7 +383,7 @@
                 <img src="./imagenes/Jugadores/yunlu_wang.webp" alt="">
             </div>
             <div class="jugador_info">
-                <h3 class="titulo_info">Mejor Defensora</h3>
+                <h3 class="titulo_info">Mejor Receptora</h3>
                 <h2>89</h2>
                 <p>YUNLU WANG</p>
                 <p><img src="./imagenes/banderas/bandera_china.png" alt="" height="15px" width="30px"> China</p>
