--- a/pages/deportes/Voley/home_voley.html
+++ b/pages/deportes/Voley/home_voley.html
@@ -184,7 +184,8 @@
                     <img src="./imagenes/fondo_nations_league.jpeg" alt="">
                 </div>
                 <div class="jugador">
-                    <img src="./imagenes/Jugadores/yuki_ishikawa.png" alt="">
+                    <img src="./imagenes/Jugadores/yuki_ishikawa.png" alt="" onmouseover="showTooltip(this)" onmouseout="hideTooltip(this)">
+                    <div class="tooltip">Informacion del jugador</div>
                 </div>
                 <div class="jugador_info">
                     <h3 class="titulo_info">Máximo Anotador</h3>
