--- a/pages/biblioteca_videos/fotos f1/fotos_f1.html
+++ b/pages/biblioteca_videos/fotos f1/fotos_f1.html
@@ -9,16 +9,21 @@
     <style>
         body 
         {
-            background: #3ca0df; /* Fallback color for old browsers */
-            background: -webkit-linear-gradient(to right, #2596ca, #13415e); /* Chrome 10-25, Safari 5.1-6 */
-            background: linear-gradient(to right, #134964, #0e4058); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+            background-image: url('./formula-1-logo-uhd-4k-wallpaper.jpg'); /* Reemplaza 'tu-imagen.jpg' con la URL de tu imagen */
+            background-size: cover; /* Ajusta la imagen al tamaño de la ventana del navegador */
+            background-repeat: no-repeat; /* Evita que la imagen se repita */
+            background-attachment: fixed;
         }
     </style>
 </head>
 <body>
     <div class="botonera">
-        <button class="animated-button" onclick="window.location.href = '../home_pages.html'">
+        <button class="animated-button" onclick="window.location.href = '../../home_pages.html'">
             <span>ATRAS</span>
+            <span></span>
+        </button>
+        <button class="animated-button" onclick="window.location.href = '../home_videos.html'">
+            <span>BIBLIOTECA</span>
             <span></span>
         </button>
         <button class="animated-button" onclick="window.location.href = '../deportes/home_deportes.html'">
