--- a/pages/biblioteca_videos/fotos f1/fotos_f1.html
+++ b/pages/biblioteca_videos/fotos f1/fotos_f1.html
@@ -26,11 +26,11 @@
             <span>BIBLIOTECA</span>
             <span></span>
         </button>
-        <button class="animated-button" onclick="window.location.href = '../deportes/home_deportes.html'">
+        <button class="animated-button" onclick="window.location.href = '../../deportes/home_deportes.html'">
             <span>DEPORTES</span>
             <span></span>
         </button>
-        <button class="animated-button" onclick="window.location.href = '../estadisticas/home_estadisticas.html'">
+        <button class="animated-button" onclick="window.location.href = '../../estadisticas/home_estadisticas.html'">
             <span>ESTADISTICAS</span>
             <span></span>
         </button>
