--- a/pages/deportes/futbol/home_futbol.html
+++ b/pages/deportes/futbol/home_futbol.html
@@ -50,9 +50,9 @@
     <div class="carousel-container">
         <button id="prevBtn" class="carousel-button" onclick="changeSlide(-1)"><</button>
         <div class="carousel-slide">
-            <img src="./images/escudos_ligas/championsleague.png" alt="Resultado 1">
-            <img src="./images/escudos_ligas/libertadores.png" alt="Resultado 2">
-            <img src="./images/escudos_ligas/CONMEBOL/argentina.png" alt="Resultado 3">
+            <img src="images/escudos_ligas/PREMIERLEAGUE/fotos/premier2.png" alt="Resultado 1">
+            <img src="images/escudos_ligas/PREMIERLEAGUE/fotos/premier3.png" alt="Resultado 2">
+            <img src="images/escudos_ligas/PREMIERLEAGUE/fotos/premier4.png" alt="Resultado 3">
         </div>
         <button id="nextBtn" class="carousel-button" onclick="changeSlide(1)">></button>
     </div>
