--- a/pages/deportes/futbol/copa_libertadores/copa_libertadores.html
+++ b/pages/deportes/futbol/copa_libertadores/copa_libertadores.html
@@ -31,9 +31,9 @@
     <footer>
         <div class="redes-sociales">
            <p>Seguinos en:</p>
-           <a href="https://www.facebook.com/" class="icono-facebook"><img src="./images/redes-sociales/facebook.png" alt="Facebook"></a>
-           <a href="https://twitter.com/" class="icono-twitter"><img src="./images/redes-sociales/twitter.png" alt="Twitter"></a>
-           <a href="https://www.instagram.com/?hl=es-la" class="icono-instagram"><img src="./images/redes-sociales/instagram.png" alt="Instagram"></a>
+           <a href="https://www.facebook.com/" class="icono-facebook"><img src="../images/redes-sociales/facebook.png" alt="Facebook"></a>
+           <a href="https://twitter.com/" class="icono-twitter"><img src="../images/redes-sociales/twitter.png" alt="Twitter"></a>
+           <a href="https://www.instagram.com/?hl=es-la" class="icono-instagram"><img src="../images/redes-sociales/instagram.png" alt="Instagram"></a>
        </div>
        <div class="derechos-reservados">
            <p>&copy; DEPOLOGS. Todos los derechos reservados.</p>
