--- a/pages/deportes/futbol/copa_libertadores/copa_libertadores.html
+++ b/pages/deportes/futbol/copa_libertadores/copa_libertadores.html
@@ -10,17 +10,29 @@
     <header>
         <nav>
             <div class="logo">
-                <a href="#"><img src="../images/logo.PNG" alt="Logo"></a>
+                <a href="#"><img src="./images/logo.PNG" alt="Logo"></a>
             </div>
             <div class="enlaces">
-                <a href="../home_futbol.html">INICIO</a>
-                <a href="#">ESTADISTICAS</a>
-                <a href="#">VIDEOTECA</a>
-                <a href="#">+ DEPORTES</a>
+                <button class="animated-button" onclick="window.location.href = '../../home_pages.html'">
+                    <a href="./home_futbol.html">INICIO</a>
+                </button>
+                <button class="animated-button" onclick="window.location.href = '../home_deportes.html'">
+                    <a href="#">ESTADISTICAS</a>
+                </button>
+                <button class="animated-button" onclick="window.location.href = '../home_deportes.html'">
+                    <a href="#">VIDEOTECA</a>
+                </button>
+                <button class="animated-button" onclick="window.location.href = '../home_deportes.html'">
+                    <a href="#">+ DEPORTES</a>
+                </button>
             </div>
             <div class="ingreso">
-                <a href="#">LOGIN</a>
+                <button class="animated-button" onclick="window.location.href = '../home_deportes.html'">
+                <a href="/Depologs_tp/login/login.html">LOGIN</a>
+                </button>
+                <button class="animated-button" onclick="window.location.href = '../home_deportes.html'">
                 <a href="#">REGISTRO</a>
+                </button>
             </div>
         </nav>
     </header>
@@ -28,12 +40,15 @@
 
 
 
+
+
+
     <footer>
         <div class="redes-sociales">
            <p>Seguinos en:</p>
-           <a href="https://www.facebook.com/" class="icono-facebook"><img src="./images/redes-sociales/facebook.png" alt="Facebook"></a>
-           <a href="https://twitter.com/" class="icono-twitter"><img src="./images/redes-sociales/twitter.png" alt="Twitter"></a>
-           <a href="https://www.instagram.com/?hl=es-la" class="icono-instagram"><img src="./images/redes-sociales/instagram.png" alt="Instagram"></a>
+           <a href="https://www.facebook.com/" class="icono-facebook"><img src="../images/redes-sociales/facebook.png" alt="Facebook"></a>
+           <a href="https://twitter.com/" class="icono-twitter"><img src="../images/redes-sociales/twitter.png" alt="Twitter"></a>
+           <a href="https://www.instagram.com/?hl=es-la" class="icono-instagram"><img src="../images/redes-sociales/instagram.png" alt="Instagram"></a>
        </div>
        <div class="derechos-reservados">
            <p>&copy; DEPOLOGS. Todos los derechos reservados.</p>
