post merge con backup luciano

--- a/login/login.html
+++ b/login/login.html
@@ -1,25 +1,18 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="login.css">
-    <title>Página de Inicio de Sesión</title>
+    <title>login</title><style>
+        body 
+        {
+            background: #3ca0df; /* Fallback color for old browsers */
+            background: -webkit-linear-gradient(to right, #2596ca, #13415e); /* Chrome 10-25, Safari 5.1-6 */
+            background: linear-gradient(to right, #134964, #0e4058); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+        }
+    </style>
 </head>
 <body>
-    <div class="contenedor">
-        <form class="formulario">
-            <h2>Iniciar Sesión</h2>
-            <div class="campo">
-                <label for="usuario">Usuario</label>
-                <input type="text" id="usuario" name="usuario" placeholder="Tu nombre de usuario" required>
-            </div>
-            <div class="campo">
-                <label for="password">Contraseña</label>
-                <input type="password" id="password" name="password" placeholder="Tu contraseña" required>
-            </div>
-            <button type="submit">Iniciar Sesión</button>
-        </form>
-    </div>
+    
 </body>
 </html>
