--- a/pages/deportes/Voley/home_voley.html
+++ b/pages/deportes/Voley/home_voley.html
@@ -16,16 +16,16 @@
             </div>
             <div class="botonera">
                 <button class="boton_animado" onclick="window.location.href = '../../home_pages.html '">
-                    <a href="#">Inicio</a>
+                    <a href="#">Atras</a>
                 </button>
-                <button class="boton_animado" onclick="window.location.href = '../../home_pages.html '">
-                    <a href="#">Biblioteca</a>
-                </button>
-                <button class="boton_animado" onclick="window.location.href = '../../home_pages.html '">
+                <button class="boton_animado" onclick="window.location.href = '../../biblioteca_videos/home_videos.html '">
                     <a href="#">Estadisticas</a>
                 </button>
                 <button class="boton_animado" onclick="window.location.href = '../../home_pages.html '">
-                    <a href="#">Deportes</a>
+                    <a href="#">Fotos y Videos</a>
+                </button>
+                <button class="boton_animado" onclick="window.location.href = '../../home_pages.html '">
+                    <a href="#">+Deportes</a>
                 </button>
             </div>
             <div class="logo_titulo">
