cambios en los href

--- a/pages/deportes/Voley/home_voley.html
+++ b/pages/deportes/Voley/home_voley.html
@@ -21,10 +21,10 @@
                 <button class="boton_animado" onclick="window.location.href = '../../estadisticas/home_estadisticas.html'">
                     <a href="#">Estadisticas</a>
                 </button>
-                <button class="boton_animado" onclick="window.location.href = '../../biblioteca_videos/home_videos.html '">
+                <button class="boton_animado" onclick="window.location.href = '../../biblioteca_videos/fotos voley/fotos_voley.html '">
                     <a href="#">Fotos y Videos</a>
                 </button>
-                <button class="boton_animado" onclick="window.location.href = '../../home_pages.html '">
+                <button class="boton_animado" onclick="window.location.href = '../home_deportes.html '">
                     <a href="#">+Deportes</a>
                 </button>
             </div>
@@ -392,6 +392,8 @@
         </div>
 
     </section>
+
+    <h1>holaaaaaaaaaaaaaaaa</h1>
 
     <!---<section class="carrusel">
         <div class="noticias">
