cambios en el href

--- a/pages/home_pages.html
+++ b/pages/home_pages.html
@@ -125,7 +125,8 @@
                     integrados por seis jugadores cada uno, 
                     se enfrentan sobre una área de juego separada por una red central. 
                 </p>
-                <button class="btn">llevame a voley</button>
+                <button class="btn" onclick="window.location.href = 'deportes/voley/home_voley.html'">llevame a Voley</button>
+
                 </div>
             </div>
         </div>
