--- a/pages/biblioteca_videos/fotos voley/fotos_voley.html
+++ b/pages/biblioteca_videos/fotos voley/fotos_voley.html
@@ -82,11 +82,11 @@
     <!--carousel de fotos-->
     <div class="carousel">
         <div class="card">
-            <p><img src="./1087024.jpg"></p>
-            <p><img src="./1191192.jpg"></p>
-            <p><img src="./121090-Formula-1-McLaren-Mclaren-Mp4-Marlboro-Ayrton-Senna-helmet-rain.jpg"></p>
-            <p><img src="./1211644.jpg"></p>
-            <p><img src="./1213896.jpg"></p>
+            <p><img src="./Imagenes_voley/noticia1.jpg"></p>
+            <p><img src="./Imagenes_voley/noticia2.jpg"></p>
+            <p><img src="./Imagenes_voley/noticia3.jpg"></p>
+            <p><img src="./Imagenes_voley/noticia4.jpeg"></p>
+            <p><img src="./Imagenes_voley/noticia5.jpg"></p>
             <p><img src="./1214052.png"></p>
         </div>
     </div>
