cambios con las fotos voley

--- a/pages/biblioteca_videos/fotos voley/fotos_voley.html
+++ b/pages/biblioteca_videos/fotos voley/fotos_voley.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <link rel="stylesheet" href="/pages/biblioteca_videos/home_videos.css">
+    <link rel="stylesheet" href="../home_videos.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Bebas Neues">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
