--- a/pages/biblioteca_videos/fotos voley/fotos_voley.html
+++ b/pages/biblioteca_videos/fotos voley/fotos_voley.html
@@ -17,7 +17,7 @@
 </head>
 <body>
     <div class="botonera">
-        <button class="animated-button" onclick="window.location.href = '../home_pages.html'">
+        <button class="animated-button" onclick="window.location.href = ''">
             <span>ATRAS</span>
             <span></span>
         </button>
@@ -385,7 +385,7 @@
 
     <script>
         // Array de textos que quieres mostrar
-        const textos = ["EL FUTBOL SE JUEGA CON UNA PEROTA", "LA FORMULA 1 ES LA MAXIMA CATEGORIA DEL AUTOMIVILISMO",
+        const textos = ["EL FUTBOL SE JUEGA CON UNA PELOTA", "LA FORMULA 1 ES LA MAXIMA CATEGORIA DEL AUTOMIVILISMO",
         "A LUCAS LE GUSTA EL PENE ", "EL PAN ESTA SOBREVALORADO"];
         let currentIndex = 0;
 
